# brainfuck

./: .gitignore  COMMANDS.md  Cargo.toml  LICENCE  README.md
src/: interactive.rs  main.rs  runtime.rs
src/interactive/: command.rs  command_input.rs  runtime_data.rs  simple_text_block.rs  source_code.rs
src/runtime/: context.rs
