[package]
name = "brainfuck"
version = "0.1.0"
license = "MIT"
authors = ["tecc"]

edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
humantime = "2.1.0"
itertools = "0.12.1"
ratatui = "0.26.2"
smallvec = { version = "1.13.2", features = ["const_new", "union", "const_generics"] }
spin = "0.9.8"
tui-input = "0.8.0"
uncased = "0.9.10"
unicase = "2.7.0"
